--- a/password_manager_app/templates/home.html
+++ b/password_manager_app/templates/home.html
@@ -130,7 +130,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="header-content text-center">
-                            <h3 class="header-title">Gestore di password sicuro {{state}}</h3>
+                            <h3 class="header-title">Gestore di password sicuro</h3>
                             <p class="text">Con la sua interfaccia super semplice, il nostro SPM è un'ottima scelta per coloro che hano molte password da immagazinare.</p>
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" href="#">i nostri servizi</a></li>
@@ -348,7 +348,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section-title text-center pb-10">
-                        <h4 class="title">Mandaci UN messaggio</h4>
+                        <h4 class="title">Mandaci un messaggio</h4>
                         <p class="text"></p>
                     </div> <!-- section title -->
                 </div>
@@ -391,7 +391,7 @@
                                 <p class="form-message"></p>
                                 <div class="col-md-12">
                                     <div class="single-form form-group text-center">
-                                        <button type="submit" class="main-btn">send message</button>
+                                        <button type="submit" class="main-btn">Invia</button>
                                     </div> <!-- single form -->
                                 </div>
                             </div> <!-- row -->
@@ -429,25 +429,16 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <div class="footer-link">
-                            <h6 class="footer-title">Company</h6>
+                            <h6 class="footer-title">Compagnia</h6>
                             <ul>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Career</a></li>
+                                <li><a class="page-scroll" href="#home">Su di Noi</a></li>
+                                <li><a class="page-scroll" href="#contact">Contatti</a></li>
+                                <li><a class="page-scroll" href="#service">Servizi</a></li>
 
                             </ul>
                         </div> <!-- footer link -->
                     </div>
-                    <div class="col-lg-3 col-md-4 col-sm-6">
-                        <div class="footer-link">
-                            <h6 class="footer-title">Product & Services</h6>
-                            <ul>
-                                <li><a href="#">Products</a></li>
-                                <li><a href="#">Business</a></li>
-                                <li><a href="#">Developer</a></li>
-                            </ul>
-                        </div> <!-- footer link -->
-                    </div>
+
                     <div class="col-lg-3 col-md-4 col-sm-5">
                         <div class="footer-link">
                             <h6 class="footer-title">Help & Suuport</h6>
@@ -460,14 +451,14 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-7">
                         <div class="footer-newsletter">
-                            <h6 class="footer-title">Subscribe Newsletter</h6>
+                            <h6 class="footer-title">Iscriviti Per avere le Novità</h6>
                             <div class="newsletter">
                                 <form action="#">
                                     <input type="text" placeholder="Your Email">
                                     <button type="submit"><i class="lni-angle-double-right"></i></button>
                                 </form>
                             </div>
-                            <p class="text">Subscribe weekly newsletter to stay upto date. We don’t send spam.</p>
+                            <p class="text">iscriviti per rimanere aggiornato</p>
                         </div> <!-- footer newsletter -->
                     </div>
                 </div> <!-- row -->
