--- a/password_manager_app/templates/home.html
+++ b/password_manager_app/templates/home.html
@@ -130,7 +130,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-8 col-lg-10">
                         <div class="header-content text-center">
-                            <h3 class="header-title">Gestore di password sicuro</h3>
+                            <h3 class="header-title">Gestore di password sicuro{{name}}</h3>
                             <p class="text">Con la sua interfaccia super semplice, il nostro SPM è un'ottima scelta per coloro che hano molte password da immagazinare.</p>
                             <ul class="header-btn">
                                 <li><a class="main-btn btn-one" href="#">i nostri servizi</a></li>
